	Form #0: the version number is like X.XX-Y.YY where X.XX shows the 
	version of the GTK interface and Y.YY shows the version of the TI link
	routines.
	New form #1: after the libTIcalc: X.XX is the version of GtkTiLink
	New form #2: after the 3.14, an even number is a stable version 
	whereas an odd number is an unstable/devel version.
	New form #3: tilp (cables, calcs, tiffep) version.

- 09/05/2003, version 6.68 (3.7.6, 0.5.6, 4.4.9):
	Re-enabled mfc folder for SVN repository.
	Rebuilt under Win32.
	Fixed "Invalid UTF-8 ..." strings appearing in DOS box and some bug
	fixes.
	
- 04/05/2003:
	Beta release of the Linux version on ticalc.org.

- 03/05/2003, version 6.67 (3.7.6, 0.5.6, 4.4.9):
	Bug fix in the screenshot box (fsel box displayed while connection
	failed).
	Statusbar updated to new callback.
	mkdir: utf8 to locale conversion (the GLib function seems not to
	work correctly) -> pending
	
- 23/04/2003, version 6.66 (3.7.5, 0.5.5, 4.4.9):
	Bug fixes with g_strfreev thanks to Tijl.
	Small fixes in the plugin support.
	Execution order changed: run, and next: load/save
	Added Group File Viewer plugin.
	
- 20/04/2003, version 6.65 (3.7.5, 0.5.5, 4.4.9):
	Fixed problems of font by using Unicode translation.
	All characters (latin & greek) are displayed fine in both windows
	(computer & calc).
	Win32 build.
	Fonts dir removed.
	
- 20/04/2003, version 6.64 (3.7.5, 0.5.4, 4.4.9):
	Tijl's patch merged.
	
 - 15/04/2003, version 6.63 (3.7.4, 0.5.3, 4.4.7):
	'use_checksum' option removed (unused).
	Warnings due to redefinition of PACKAGES in plugins fixed.
	Bitmap to bytemap conversion added into tilp_screen.c as well as
	blurry mode.
	Switched to dirlist v2.
	
- 05/04/2003, version 6.62 (3.7.4, 0.5.3, 4.4.7):
	Icon name & descriptive separated.
	i18n enabled for Windows.
	
- 31/03/2003, version 6.61 (3.7.4, 0.5.2, 4.4.7):
	Plug-in support improved and fixed.
	Included French translations.
	tilp_error.c & gtk_refresh.c modified (locale to utf8 translation).
	