@@ -101,10 +101,15 @@ static void gtkgui_pbar()
 // tifiles_translate_set_encoding()
 static void gtkgui_label()
 {
+	gsize br, bw;
+	gchar *utf8;
+
   if (p_win.label == NULL)
     return;
 
-  gtk_label_set(GTK_LABEL(p_win.label), info_update.label_text);
+	utf8 = g_locale_to_utf8(info_update.label_text, -1, &br, &bw, NULL);
+
+  gtk_label_set(GTK_LABEL(p_win.label), utf8);
   while (gtk_events_pending()) 
     {
       gtk_main_iteration();
